# Kensho

./: Cargo.toml  HIERARCHICAL_ANALYSIS_GUIDE.md  IMPLEMENTATION_GUIDE.md  PROJECT_SUMMARY_20251215.md  README (1).md  README.md  TOOL_DEFINITIONS.js  main.go
cache/: 101dcbb52a2586c.json
docs/: DECOMPILER_CORE_COMPLETE.md  GHIDRA_DECOMPILER_ANALYSIS.md  PROTOTYPE_COMPLETE.md  PROTOTYPE_TEST_RESULTS.md
examples/: advanced_demo.rs  decompile_demo.rs  decompiler_demo.rs  pe_analyzer.rs  pe_explorer.rs  real_binary_demo.rs  simple_disasm.rs  test_int3.rs  test_optimization.rs  test_phase10.rs  test_phase89.rs  warthunder_analysis.rs  warthunder_dynamic.rs  warthunder_function_detail.rs  warthunder_strings.rs
mnt/user-data/outputs/ghidra-mcp-rust/: Cargo.toml  README.md
mnt/user-data/outputs/ghidra-mcp-rust/src/: analyzer.rs  decompiler.rs  disassembler.rs  main.rs
src/: analyzer.rs  disassembler.rs  ghidra_headless.rs  hierarchical_analyzer.rs  lib.rs  main.rs  memory_scanner.rs
src/decompiler_prototype/: c_printer.rs  capstone_translator.rs  cfg.rs  control_flow.rs  dataflow.rs  function_analyzer.rs  jumptable.rs  mod.rs  nzmask.rs  optimizer.rs  parallel_analyzer.rs  pcode.rs  printer.rs  ssa.rs  ssa_advanced.rs  symbol_recovery.rs  type_inference.rs  x86_64.rs
